# Thread_BR

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Plan.md  README.md  partitions.csv  sdkconfig.defaults
aws-wildfire-dashboard/: DEPLOYMENT-SUMMARY.md  LICENSE  MODIFICACIONES.md  PENDING-TASKS.md  README.md
aws-wildfire-dashboard/backend/infrastructure/cloudformation/: 01-dynamodb-sensor-data.yaml  01-timestream.yaml  02-dynamodb.yaml  03-s3.yaml  04-iam-roles.yaml  05-api-gateway.yaml  06-eventbridge.yaml
aws-wildfire-dashboard/backend/infrastructure/scripts/: create-iot-rules.sh  deploy-lambda.sh  deploy-phase1.sh  deploy-phase2.sh  deploy-phase3.sh
aws-wildfire-dashboard/backend/iot-rules/: rule-to-dynamodb.json  rule-to-lambda-enricher.json  rule-to-s3-archive.json
aws-wildfire-dashboard/backend/lambda/data-enricher/: index.js  package.json
aws-wildfire-dashboard/backend/lambda/ml-processor/: index.js  package.json
aws-wildfire-dashboard/frontend/: .env.example  package-lock.json  package.json
aws-wildfire-dashboard/frontend/public/: index.html
aws-wildfire-dashboard/frontend/src/: index.css
components/aws_helpers/: CMakeLists.txt
components/aws_mqtt/: CMakeLists.txt  fleet_provisioning_with_csr_demo.c
main/: CMakeLists.txt  Thread_BR.c  aws_task.c  border_router_launch.c  idf_component.yml  main.c  shared_data.h  thread_coap_task.c  wifi_connectivity_watchdog.c  wifi_connectivity_watchdog.h
main/wifi_onboarding/: CAPTIVE_PORTAL_FIX.md  dns_server.c  dns_server.h  portal.html  wifi_onboarding.c  wifi_onboarding.h
(+15 files in other folders)
